451209: Rename Daily Work to My Work
- Rename Daily Work to My work in the UI
- Rename (almost) all mentions of Daily Work
- Avoid renaming any of the Mixpanel events!

Conflicts:
	webapp/src/main/webapp/WEB-INF/jsp/administration/editUser.jsp
	webapp/src/main/webapp/WEB-INF/jsp/dailyWork.jsp
	webapp/src/main/webapp/WEB-INF/tags/structure/defaultRightHeader.tag

--- a/webapp/src/main/webapp/static/html/help/dailyWorkPopup.html
+++ b/webapp/src/main/webapp/static/html/help/dailyWorkPopup.html
@@ -1,5 +1,5 @@
 
-<p>Daily Work view is a personal page for every user, which gathers all your current
+<p>My work view is a personal page for every user, which gathers all your current
 tasks and stories into a single view.</p>
 
 <div style="text-align: center;" style="">
