434208: Rename Timesheets to Reporting
- Rename Timesheets to Reporting

Original description:
“Timesheets => Reporting”

Conflicts:
	webapp/src/main/webapp/WEB-INF/jsp/administration/settings.jsp
	webapp/src/main/webapp/WEB-INF/jsp/extendedhelp.jsp
	webapp/src/main/webapp/static/css/timesheets.css

--- a/webapp/src/main/webapp/static/html/help/timesheetsPopup.html
+++ b/webapp/src/main/webapp/static/html/help/timesheetsPopup.html
@@ -1,5 +1,5 @@
 
-<p>When timesheets are enabled, you can log spent effort to tasks,
+<p>When reporting is enabled, you can log spent effort to tasks,
 stories, iterations, projects or products. Use the level of detail that is actually needed.</p>
 
 <table border="1" style="border-collapse: collapse; border: 1px solid #ccc;">
@@ -12,14 +12,14 @@ stories, iterations, projects or products. Use the level of detail that is actua
     <td style="text-align: center; width: 50%; padding: 0.5em;">
       <img src="static/img/help/story_spent_effort.png" alt="" style="margin-bottom: 0.5em;"/>
       <br/>
-      <span style="font-style: italic; ">Double clicking the ES cell opens the same dialog as the 
-      spent effort link in the edit menu.</span>  
+      <span style="font-style: italic; ">Double clicking the ES cell opens the same dialog as the
+      spent effort link in the edit menu.</span>
     </td>
   </tr>
 </table>
 
 <p>
-When timesheets are enabled, the Timesheets tab appears. On this tab
+When reporting is enabled, the Reporting tab appears. On this tab
 you can generate reports of spent effort and export the information as
 an Excel document.
 </p>
